[package]
name = "python-cddl-cat"
description = "Python interface for CDDL parsing and validation"
keywords = ["cddl", "cbor", "json"]
categories = ["encoding", "network-programming", "parser-implementations"]
version = "0.1.0"
repository = "https://github.com/ericseppanen/cddl-cat"
license = "MIT"
authors = ["Eric Seppanen <eds@reric.net>"]
readme = "README.md"
edition = "2018"

[lib]
name = "cddlcat"
crate-type = ["cdylib"]

[dependencies.cddl-cat]
version = "0.3.0"
#path = "../cddl-cat"

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]
